Updated yaml generator to create data type specific UI parameter. Update schema way of reading schema from controller(using inspect.signature  function.
